# ESP32-Air-Quality-Station

./: .gitignore  CMakeLists.txt  README.md  long_term_air_quality.csv  partitions.csv  pytest_hello_world.py
.cache/clangd/index/: dht.c.CB3A2EF1FF757797.idx  dht.h.7E40E867D137CA04.idx  esp_idf_lib_helpers.h.B7EB9504B3AE5B3B.idx  ets_sys.h.87D4CD92E43E2176.idx  font8x8_basic.h.53BA4980F0CEFAAC.idx  hello_world_main.c.88A22D2FDDFB2C7B.idx  mqtt_client.c.E19F923F41DD440A.idx  mqtt_client.h.23CC69367F802D93.idx  mqtt_client_priv.h.0283165B3F9C04AD.idx  mqtt_config.h.98DEE796711558A1.idx  mqtt_msg.c.D2044FD3A05BF4E1.idx  mqtt_msg.h.D6200E72FA514C8A.idx  mqtt_outbox.c.622E195C40C69CE3.idx  mqtt_outbox.h.A2CB6F1BDE7D61FC.idx  mqtt_supported_features.h.79AA72A08125C2AA.idx  oled_sleep.c.1452E71AA8E9E0D4.idx  oled_sleep.h.35D5E589CEA9F4A2.idx  platform.h.E5EC60C58F5B1B77.idx  platform_esp32_idf.c.C08B7FD65671159B.idx  platform_esp32_idf.h.3EB79ABAE373990A.idx  ssd1306.c.698A94002541322D.idx  ssd1306.h.0B0AFBAE790C049C.idx  ssd1306_i2c_new.c.EAF6DC84286D96BC.idx  ssd1306_spi.c.9B1B7673F875971B.idx
IOT_Dashboard/: app.py  high_jitter_logs.csv  long_term_air_quality.csv
IOT_Dashboard/templates/: index.html
components/dht/: CMakeLists.txt
components/ssd1306/: CMakeLists.txt  ssd1306.c  ssd1306.h
main/: CMakeLists.txt  hello_world_main.c  led_sleep.c  led_sleep.h  oled_sleep.c  oled_sleep.h  sampling_proof.c  sampling_proof.h
